--- a/components/projects/projects.module.scss
+++ b/components/projects/projects.module.scss
@@ -68,6 +68,7 @@
         height: 80px;
         margin-bottom: 0;
         padding-top: 1rem;
+        font-size: 1.4rem;
 
         @include mobile {
           font-size: 1rem;
